testsuite/poke.pkl/preincr-diag-1.pk
/* { dg-do compile } */

++"foo"; /* { dg-error "invalid operand.*\n.*expected integral or offset" } */
